--- a/src/index.css
+++ b/src/index.css
@@ -50,6 +50,11 @@ Global Styles
 ===============
 */
 
+@font-face {
+  font-family: Kunika;
+  src: url("./assets/fonts/Kunika.otf");
+}
+
 *,
 ::after,
 ::before {
@@ -58,7 +63,7 @@ Global Styles
   box-sizing: border-box;
 }
 body {
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
+  font-family: Kunika, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
     Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   background: var(--clr-grey-10);
   color: var(--clr-grey-1);
